--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <title>the world oasis</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="overflow-y: hidden"
+    ></div>
     <script
       type="module"
       src="/src/main.jsx"
